fix: z-index

--- a/public/global.css
+++ b/public/global.css
@@ -17,7 +17,12 @@ body::-webkit-scrollbar {
     display: none;
 }
 
+* {
+    z-index: 10;
+}
+
 main {
+    z-index: 5;
     --navbar-height: 150px;
 }
 
